<resources>
    <string name="app_name">calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="store"> </string>
    <string name="input"> </string>
    <string name="btn_M_plus">M+</string>
    <string name="btn_M_minus">M-</string>
    <string name="btn_RM">RM</string>
    <string name="btn_sqr">sqr</string>
    <string name="btn_sqrt">sqrt</string>
    <string name="btn_division">/</string>
    <string name="btn_percent">%</string>
    <string name="btn_multiple">*</string>
    <string name="btn_clear">C</string>
    <string name="btn_minus">-</string>
    <string name="btn_backspace"><![CDATA[<=]]></string>
    <string name="btn_dot">.</string>
    <string name="btn_plus">+</string>
    <string name="btn_equal">=</string>

    <string name="btn_1">1</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_0">0</string>
    <string name="btn_00">00</string>
    <string name="memory">0</string>

</resources>
